--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 TODO
 ====
 1. More data object for Wikimedia Commons or only image?
-2.
+2. Inherit some common data object and in this focus to Wikimedia Commons.
+3.
 
 Applied
 =======
