--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO
 ====
 1. More data object for Wikimedia Commons or only image?
 2. Inherit some common data object and in this focus to Wikimedia Commons.
-3.
+3. Inherit common Data::Image and add things related to Wikimedia Commons.
+4.
 
 Applied
 =======
