--- a/TODO
+++ b/TODO
@@ -3,7 +3,8 @@ TODO
 1. More data object for Wikimedia Commons or only image?
 2. Inherit some common data object and in this focus to Wikimedia Commons.
 Add some other Wikimedia Commons information like uploader.
-4.
+4. Add ERRORS section to doc.
+5.
 
 Applied
 =======
