--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ TODO
 2. Inherit some common data object and in this focus to Wikimedia Commons.
 Add some other Wikimedia Commons information like uploader.
 4. Add ERRORS section to doc.
-5.
+5. Move dt_created to Data::Image. Not related to Wikimedia Commons.
+6.
 
 Applied
 =======
