--- a/README
+++ b/README
@@ -13,6 +13,7 @@ SYNOPSIS
      my $height = $obj->height;
      my $id = $obj->id;
      my $license = $obj->license;
+     my $page_id = $obj->page_id;
      my $size = $obj->size;
      my $url = $obj->url;
      my $url_cb = $obj->url_cb;
@@ -63,6 +64,11 @@ METHODS
     *       "license"
 
             Image license. It's optional. Default value is undef.
+
+    *       "page_id"
+
+            Image page id on Wikimedia Commons. It's used for structured
+            data with 'M' prefix. It's optional. Default value is undef.
 
     *       "size"
 
@@ -137,6 +143,13 @@ METHODS
 
     Returns string.
 
+  "page_id"
+     my $page_id = $obj->page_id;
+
+    Get image page id.
+
+    Returns number.
+
   "size"
      my $size = $obj->size;
 
@@ -188,6 +201,7 @@ EXAMPLE
              ),
              'height' => 2730,
              'license' => 'cc-by-sa-4.0',
+             'page_id' => '95648152',
              'size' => 1040304,
              'url' => 'https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg',
              'width' => 4096,
@@ -202,6 +216,7 @@ EXAMPLE
      print 'URL: '.$obj->url."\n";
      print 'Width: '.$obj->width."\n";
      print 'License: '.$obj->license."\n";
+     print 'Page id: '.$obj->page_id."\n";
      print 'Date and time the photo was created: '.$obj->dt_created."\n";
      print 'Date and time the photo was uploaded: '.$obj->dt_uploaded."\n";
 
@@ -214,6 +229,7 @@ EXAMPLE
      # URL: https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg
      # Width: 4096
      # License: cc-by-sa-4.0
+     # Page id: 95648152
      # Date and time the photo was created: 2022-01-01T00:00:00
      # Date and time the photo was uploaded: 2022-07-14T00:00:00
 
