--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.07
  - Fix minimal version of Mo::utils.
  - Update copyright years.
+ - Update to Data::Image@0.05.
 
 0.06 2023-06-26T00:36:55+02:00
  - Add ERRORS section to doc.
